# SCAnalysis

./: MANIFEST.in  PyInstaller.spec  README.md  requirements.txt  setup.cfg
Docs/: AdminManual.md  UserManual.md
SCAnalysis/: __init__.py  __main__.py
SCAnalysis/Application/: App.py  AppWindow.py  __init__.py
SCAnalysis/Graph/: Graph.py  GraphController.py  GraphDialog.py  GraphSettings.py  GraphTab.py  GraphTabBar.py  GraphTypes.py  GraphWindow.py
SCAnalysis/Logging/: Filters.py  Log.py  LogWidget.py  __init__.py
SCAnalysis/ParsePlot/: pdParsing.py  plot.py
SCAnalysis/Resources/: __init__.py
SCAnalysis/Resources/Docs/: About.md  AdminManual.md
SCAnalysis/Resources/UI/: HelpDialog.ui  LogWidget.ui  MainWindow.ui  QuitDialog.ui
SCAnalysis/System/: FileSystem.py
Scripts/envScripts/: linux-env-build.txt
Tests/Application/: testApp.py  testAppWindow.py
Tests/DataGeneration/: NumberGen.py  StringGen.py
Tests/Logging/: testLogWidget.py
tests/Application/: testApp.py  testAppWindow.py
tests/DataGeneration/: ObjectGen.py
tests/Logging/: testFilters.py  testLog.py  testLogWidget.py
tests/System/: testFileSystem.py
