[metadata]
name = SCAnalysis
version = 1.1
author = Charles Andrews Katherine Schantz
author_email = N/A
description = Analysing and graphing statical data gathered from logs.
url = N/A
platform = Windows, Linux, Mac OS
keywords = Solar Car, Solar, Car, Analysis, SCAnalysis
classifiers =
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
packages =
    SCAnalysis
    SCAnalysis/Resources
    SCAnalysis/Application
    SCAnalysis/Graph
    SCAnalysis/Logging
    SCAnalysis/System
    SCAnalysis/Resources/UI
    SCAnalysis/Resources/Docs
    SCAnalysis/Resources/Icons
include_package_data = True

install_requires =
    numpy >= 1.15.4
    matplotlib >= 2.2.3
    PyQt >= 5.6.0
    pywin32 >= 1.0; platform_system == "Windows"
    pyinstaller >= 3.4
    pandas >= 0.24.1

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests

[bdist_wheel]
universal = 1

[bdist_rpm]
release = 1
group = Charles Andrews Katherine Schantz
packager = Charles Andrews <cjan225@g.uky.edu>
doc_files = README.md
requires =
    numpy >= 1.15.4
    matplotlib >= 2.2.3
    PyQt >= 5.6.0
    pywin32 >= 1.0; platform_system == "Windows"
    pyinstaller >= 3.4
    pandas >= 0.24.1
